--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="アイギスの収集イベント用計算機です。結晶の見積りや進捗ペースの確認に使ってください。">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <title>アイギス収集計算機@卵祭りの山賊娘リーフ</title>
+  <title>アイギス収集計算機@白無垢の狛犬コマ</title>
   <style>
     body{
       font-family: "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", YuGothic, sans-serif;
@@ -123,7 +123,7 @@
     <div class="row">
       <main class="col-md-8">
         <section class="medal">
-          <h3>タマゴの飾り</h3>
+          <h3>小人の帽子</h3>
           <form>
             <div class="form-row">
               <div class="form-group col-3 col-md-3">
@@ -241,7 +241,7 @@
         </section>
       </main>
       <div class="side col-md-3 ml-auto">
-        <img class="mb-4" src="20220414.jpg" alt="" style="width: 100%;" data-toggle="modal" data-target="#myModal">
+        <img class="mb-4" src="20220609.jpg" alt="" style="width: 100%;" data-toggle="modal" data-target="#myModal">
         <div class="ad">
           <h3>小説『白の帝国編3』</h3>
           <a href="https://amzn.to/2YHcS23" target="_blank"><img src="teikoku2.jpg" style="width: 80%; max-width: 200px;" alt=""></a>
@@ -250,7 +250,7 @@
       <!-- modal -->
       <div class="modal fade" id="myModal">
         <div class="modal-dialog" role="document">
-          <img src="20220414.jpg" alt="" data-dismiss="modal" style="width: 100%; max-width: 800px; margin: 0 auto;">
+          <img src="20220609.jpg" alt="" data-dismiss="modal" style="width: 100%; max-width: 800px; margin: 0 auto;">
         </div>
       </div>
     </div>
@@ -298,8 +298,10 @@
     // var time_begin = new Date(2021,  5, 10, 15, 0)    // 2021/06/10 15:00
     // var time_end   = new Date(2021, 10, 11, 11, 0)    // 2021/11/11 11:00 帝国大戦第二陣
     // var time_begin = new Date(2021,  9, 28, 15, 0)    // 2021/10/28 15:00
-    var time_end   = new Date(2022,  3, 28, 11, 0)    // 2022/04/11 11:00 うさぎリーフ
-    var time_begin = new Date(2022,  3, 14, 15, 0)    // 2022/04/14 15:00
+    // var time_end   = new Date(2022,  3, 28, 11, 0)    // 2022/04/28 11:00 うさぎリーフ
+    // var time_begin = new Date(2022,  3, 14, 15, 0)    // 2022/04/14 15:00
+    var time_end   = new Date(2022,  5, 23, 11, 0)    // 2022/06/23 11:00 花嫁コマ
+    var time_begin = new Date(2022,  5, 9, 15, 0)    // 2022/06/09 15:00
     var time_remain = time_end - time_now
     var time_progress = (time_now - time_begin) / (time_end - time_begin)
 
